ProjetoBase/NI/simulaMepa.output
Grammar

    0 $accept: linhas $end

    1 linhas: linhas linha
    2       | linha

    3 $@1: %empty

    4 linha: rot $@1 comando

    5 rot: ROTULO DOIS_PONTOS
    6    | %empty

    7 virgula: VIRGULA
    8        | %empty

    9 comando: INPP
   10        | PARA
   11        | SOMA
   12        | SUBT
   13        | MULT
   14        | DIVI
   15        | INVR
   16        | CONJ
   17        | DISJ
   18        | NEGA
   19        | CMME
   20        | CMMA
   21        | CMIG
   22        | CMDG
   23        | CMEG
   24        | CMAG
   25        | NADA
   26        | LEIT
   27        | IMPR
   28        | CRCT INTEIRO
   29        | AMEM INTEIRO
   30        | DMEM INTEIRO
   31        | ENPR INTEIRO
   32        | DSVS ROTULO
   33        | DSVF ROTULO

   34 $@2: %empty

   35 comando: CRVL INTEIRO $@2 virgula INTEIRO

   36 $@3: %empty

   37 comando: ARMZ INTEIRO $@3 virgula INTEIRO

   38 $@4: %empty

   39 comando: CRVI INTEIRO $@4 virgula INTEIRO

   40 $@5: %empty

   41 comando: ARMI INTEIRO $@5 virgula INTEIRO

   42 $@6: %empty

   43 comando: CREN INTEIRO $@6 virgula INTEIRO

   44 $@7: %empty

   45 comando: ENRT INTEIRO $@7 virgula INTEIRO
   46        | CHPR ROTULO virgula INTEIRO

   47 $@8: %empty

   48 comando: RTPR INTEIRO $@8 virgula INTEIRO

   49 $@9: %empty

   50 comando: DSVR ROTULO virgula INTEIRO $@9 virgula INTEIRO


Terminals, with rules where they appear

$end (0) 0
error (256)
DOIS_PONTOS (258) 5
ROTULO (259) 5 32 33 46 50
INTEIRO (260) 28 29 30 31 35 37 39 41 43 45 46 48 50
VIRGULA (261) 7
INPP (262) 9
PARA (263) 10
SOMA (264) 11
SUBT (265) 12
MULT (266) 13
DIVI (267) 14
INVR (268) 15
CONJ (269) 16
DISJ (270) 17
NEGA (271) 18
CMME (272) 19
CMMA (273) 20
CMIG (274) 21
CMDG (275) 22
CMEG (276) 23
CMAG (277) 24
NADA (278) 25
LEIT (279) 26
IMPR (280) 27
CRCT (281) 28
AMEM (282) 29
DMEM (283) 30
ENPR (284) 31
ENRT (285) 45
DSVS (286) 32
DSVF (287) 33
CRVL (288) 35
ARMZ (289) 37
CRVI (290) 39
ARMI (291) 41
CREN (292) 43
CHPR (293) 46
RTPR (294) 48
DSVR (295) 50


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
linhas (42)
    on left: 1 2, on right: 0 1
linha (43)
    on left: 4, on right: 1 2
$@1 (44)
    on left: 3, on right: 4
rot (45)
    on left: 5 6, on right: 4
virgula (46)
    on left: 7 8, on right: 35 37 39 41 43 45 46 48 50
comando (47)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 35 37 39 41 43 45 46 48 50, on right: 4
$@2 (48)
    on left: 34, on right: 35
$@3 (49)
    on left: 36, on right: 37
$@4 (50)
    on left: 38, on right: 39
$@5 (51)
    on left: 40, on right: 41
$@6 (52)
    on left: 42, on right: 43
$@7 (53)
    on left: 44, on right: 45
$@8 (54)
    on left: 47, on right: 48
$@9 (55)
    on left: 49, on right: 50


State 0

    0 $accept: . linhas $end

    ROTULO  shift, and go to state 1

    $default  reduce using rule 6 (rot)

    linhas  go to state 2
    linha   go to state 3
    rot     go to state 4


State 1

    5 rot: ROTULO . DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 5


State 2

    0 $accept: linhas . $end
    1 linhas: linhas . linha

    $end    shift, and go to state 6
    ROTULO  shift, and go to state 1

    $default  reduce using rule 6 (rot)

    linha  go to state 7
    rot    go to state 4


State 3

    2 linhas: linha .

    $default  reduce using rule 2 (linhas)


State 4

    4 linha: rot . $@1 comando

    $default  reduce using rule 3 ($@1)

    $@1  go to state 8


State 5

    5 rot: ROTULO DOIS_PONTOS .

    $default  reduce using rule 5 (rot)


State 6

    0 $accept: linhas $end .

    $default  accept


State 7

    1 linhas: linhas linha .

    $default  reduce using rule 1 (linhas)


State 8

    4 linha: rot $@1 . comando

    INPP  shift, and go to state 9
    PARA  shift, and go to state 10
    SOMA  shift, and go to state 11
    SUBT  shift, and go to state 12
    MULT  shift, and go to state 13
    DIVI  shift, and go to state 14
    INVR  shift, and go to state 15
    CONJ  shift, and go to state 16
    DISJ  shift, and go to state 17
    NEGA  shift, and go to state 18
    CMME  shift, and go to state 19
    CMMA  shift, and go to state 20
    CMIG  shift, and go to state 21
    CMDG  shift, and go to state 22
    CMEG  shift, and go to state 23
    CMAG  shift, and go to state 24
    NADA  shift, and go to state 25
    LEIT  shift, and go to state 26
    IMPR  shift, and go to state 27
    CRCT  shift, and go to state 28
    AMEM  shift, and go to state 29
    DMEM  shift, and go to state 30
    ENPR  shift, and go to state 31
    ENRT  shift, and go to state 32
    DSVS  shift, and go to state 33
    DSVF  shift, and go to state 34
    CRVL  shift, and go to state 35
    ARMZ  shift, and go to state 36
    CRVI  shift, and go to state 37
    ARMI  shift, and go to state 38
    CREN  shift, and go to state 39
    CHPR  shift, and go to state 40
    RTPR  shift, and go to state 41
    DSVR  shift, and go to state 42

    comando  go to state 43


State 9

    9 comando: INPP .

    $default  reduce using rule 9 (comando)


State 10

   10 comando: PARA .

    $default  reduce using rule 10 (comando)


State 11

   11 comando: SOMA .

    $default  reduce using rule 11 (comando)


State 12

   12 comando: SUBT .

    $default  reduce using rule 12 (comando)


State 13

   13 comando: MULT .

    $default  reduce using rule 13 (comando)


State 14

   14 comando: DIVI .

    $default  reduce using rule 14 (comando)


State 15

   15 comando: INVR .

    $default  reduce using rule 15 (comando)


State 16

   16 comando: CONJ .

    $default  reduce using rule 16 (comando)


State 17

   17 comando: DISJ .

    $default  reduce using rule 17 (comando)


State 18

   18 comando: NEGA .

    $default  reduce using rule 18 (comando)


State 19

   19 comando: CMME .

    $default  reduce using rule 19 (comando)


State 20

   20 comando: CMMA .

    $default  reduce using rule 20 (comando)


State 21

   21 comando: CMIG .

    $default  reduce using rule 21 (comando)


State 22

   22 comando: CMDG .

    $default  reduce using rule 22 (comando)


State 23

   23 comando: CMEG .

    $default  reduce using rule 23 (comando)


State 24

   24 comando: CMAG .

    $default  reduce using rule 24 (comando)


State 25

   25 comando: NADA .

    $default  reduce using rule 25 (comando)


State 26

   26 comando: LEIT .

    $default  reduce using rule 26 (comando)


State 27

   27 comando: IMPR .

    $default  reduce using rule 27 (comando)


State 28

   28 comando: CRCT . INTEIRO

    INTEIRO  shift, and go to state 44


State 29

   29 comando: AMEM . INTEIRO

    INTEIRO  shift, and go to state 45


State 30

   30 comando: DMEM . INTEIRO

    INTEIRO  shift, and go to state 46


State 31

   31 comando: ENPR . INTEIRO

    INTEIRO  shift, and go to state 47


State 32

   45 comando: ENRT . INTEIRO $@7 virgula INTEIRO

    INTEIRO  shift, and go to state 48


State 33

   32 comando: DSVS . ROTULO

    ROTULO  shift, and go to state 49


State 34

   33 comando: DSVF . ROTULO

    ROTULO  shift, and go to state 50


State 35

   35 comando: CRVL . INTEIRO $@2 virgula INTEIRO

    INTEIRO  shift, and go to state 51


State 36

   37 comando: ARMZ . INTEIRO $@3 virgula INTEIRO

    INTEIRO  shift, and go to state 52


State 37

   39 comando: CRVI . INTEIRO $@4 virgula INTEIRO

    INTEIRO  shift, and go to state 53


State 38

   41 comando: ARMI . INTEIRO $@5 virgula INTEIRO

    INTEIRO  shift, and go to state 54


State 39

   43 comando: CREN . INTEIRO $@6 virgula INTEIRO

    INTEIRO  shift, and go to state 55


State 40

   46 comando: CHPR . ROTULO virgula INTEIRO

    ROTULO  shift, and go to state 56


State 41

   48 comando: RTPR . INTEIRO $@8 virgula INTEIRO

    INTEIRO  shift, and go to state 57


State 42

   50 comando: DSVR . ROTULO virgula INTEIRO $@9 virgula INTEIRO

    ROTULO  shift, and go to state 58


State 43

    4 linha: rot $@1 comando .

    $default  reduce using rule 4 (linha)


State 44

   28 comando: CRCT INTEIRO .

    $default  reduce using rule 28 (comando)


State 45

   29 comando: AMEM INTEIRO .

    $default  reduce using rule 29 (comando)


State 46

   30 comando: DMEM INTEIRO .

    $default  reduce using rule 30 (comando)


State 47

   31 comando: ENPR INTEIRO .

    $default  reduce using rule 31 (comando)


State 48

   45 comando: ENRT INTEIRO . $@7 virgula INTEIRO

    $default  reduce using rule 44 ($@7)

    $@7  go to state 59


State 49

   32 comando: DSVS ROTULO .

    $default  reduce using rule 32 (comando)


State 50

   33 comando: DSVF ROTULO .

    $default  reduce using rule 33 (comando)


State 51

   35 comando: CRVL INTEIRO . $@2 virgula INTEIRO

    $default  reduce using rule 34 ($@2)

    $@2  go to state 60


State 52

   37 comando: ARMZ INTEIRO . $@3 virgula INTEIRO

    $default  reduce using rule 36 ($@3)

    $@3  go to state 61


State 53

   39 comando: CRVI INTEIRO . $@4 virgula INTEIRO

    $default  reduce using rule 38 ($@4)

    $@4  go to state 62


State 54

   41 comando: ARMI INTEIRO . $@5 virgula INTEIRO

    $default  reduce using rule 40 ($@5)

    $@5  go to state 63


State 55

   43 comando: CREN INTEIRO . $@6 virgula INTEIRO

    $default  reduce using rule 42 ($@6)

    $@6  go to state 64


State 56

   46 comando: CHPR ROTULO . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 66


State 57

   48 comando: RTPR INTEIRO . $@8 virgula INTEIRO

    $default  reduce using rule 47 ($@8)

    $@8  go to state 67


State 58

   50 comando: DSVR ROTULO . virgula INTEIRO $@9 virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 68


State 59

   45 comando: ENRT INTEIRO $@7 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 69


State 60

   35 comando: CRVL INTEIRO $@2 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 70


State 61

   37 comando: ARMZ INTEIRO $@3 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 71


State 62

   39 comando: CRVI INTEIRO $@4 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 72


State 63

   41 comando: ARMI INTEIRO $@5 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 73


State 64

   43 comando: CREN INTEIRO $@6 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 74


State 65

    7 virgula: VIRGULA .

    $default  reduce using rule 7 (virgula)


State 66

   46 comando: CHPR ROTULO virgula . INTEIRO

    INTEIRO  shift, and go to state 75


State 67

   48 comando: RTPR INTEIRO $@8 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 76


State 68

   50 comando: DSVR ROTULO virgula . INTEIRO $@9 virgula INTEIRO

    INTEIRO  shift, and go to state 77


State 69

   45 comando: ENRT INTEIRO $@7 virgula . INTEIRO

    INTEIRO  shift, and go to state 78


State 70

   35 comando: CRVL INTEIRO $@2 virgula . INTEIRO

    INTEIRO  shift, and go to state 79


State 71

   37 comando: ARMZ INTEIRO $@3 virgula . INTEIRO

    INTEIRO  shift, and go to state 80


State 72

   39 comando: CRVI INTEIRO $@4 virgula . INTEIRO

    INTEIRO  shift, and go to state 81


State 73

   41 comando: ARMI INTEIRO $@5 virgula . INTEIRO

    INTEIRO  shift, and go to state 82


State 74

   43 comando: CREN INTEIRO $@6 virgula . INTEIRO

    INTEIRO  shift, and go to state 83


State 75

   46 comando: CHPR ROTULO virgula INTEIRO .

    $default  reduce using rule 46 (comando)


State 76

   48 comando: RTPR INTEIRO $@8 virgula . INTEIRO

    INTEIRO  shift, and go to state 84


State 77

   50 comando: DSVR ROTULO virgula INTEIRO . $@9 virgula INTEIRO

    $default  reduce using rule 49 ($@9)

    $@9  go to state 85


State 78

   45 comando: ENRT INTEIRO $@7 virgula INTEIRO .

    $default  reduce using rule 45 (comando)


State 79

   35 comando: CRVL INTEIRO $@2 virgula INTEIRO .

    $default  reduce using rule 35 (comando)


State 80

   37 comando: ARMZ INTEIRO $@3 virgula INTEIRO .

    $default  reduce using rule 37 (comando)


State 81

   39 comando: CRVI INTEIRO $@4 virgula INTEIRO .

    $default  reduce using rule 39 (comando)


State 82

   41 comando: ARMI INTEIRO $@5 virgula INTEIRO .

    $default  reduce using rule 41 (comando)


State 83

   43 comando: CREN INTEIRO $@6 virgula INTEIRO .

    $default  reduce using rule 43 (comando)


State 84

   48 comando: RTPR INTEIRO $@8 virgula INTEIRO .

    $default  reduce using rule 48 (comando)


State 85

   50 comando: DSVR ROTULO virgula INTEIRO $@9 . virgula INTEIRO

    VIRGULA  shift, and go to state 65

    $default  reduce using rule 8 (virgula)

    virgula  go to state 86


State 86

   50 comando: DSVR ROTULO virgula INTEIRO $@9 virgula . INTEIRO

    INTEIRO  shift, and go to state 87


State 87

   50 comando: DSVR ROTULO virgula INTEIRO $@9 virgula INTEIRO .

    $default  reduce using rule 50 (comando)
